--- a/.github/workflows/update-sponsors.yml
+++ b/.github/workflows/update-sponsors.yml
@@ -1,9 +1,8 @@
 name: Update sponsors
 on:
   push:
-    branches: [main]
-    paths:
-      - .github/workflows/update-sponsors.yml
+    branches: main
+    paths: .github/workflows/update-sponsors.yml
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
